--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
         <div class="heading__slider-wrapper swiper-wrapper">
           <div class="heading__slider-slide swiper-slide">
             <div class="heading__slide-column">
-              <h2 class="heading__slide-title section-title base-title">Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              <div class="heading__slide-title section-title">
+                <h2>Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              </div>
               <div class="heading__slide-text">
                 <p>
                   Компания USC Master занимается различными
@@ -246,7 +248,9 @@
   <section class="description">
     <div class="description__container base-container" id="about">
       <div class="description__column description__column--left" data-aos="fade-right" data-aos-duration="1500">
-        <h2 class="description__column-title section-title base-title"><span class="color-elm">USC Master</span> занимается разными видами сервиса</h2>
+        <div class="description__column-title section-title">
+          <h2><span class="color-elm">USC Master</span> занимается разными видами сервиса</h2>
+        </div>
         <div class="description__column-text main-text">
           <p>USC Master предлагает различные услуги,
             чтобы удовлетворить ваши потребности.
@@ -278,7 +282,9 @@
 
   <section class="services">
     <div class="services__container base-container" id="projects">
-      <h2 class="services__title section-title base-title">«USC Master» - компания с качественной продукцией на рынке</h2>
+      <div class="services__title section-title">
+        <h2>«USC Master» - компания с качественной продукцией на рынке</h2>
+      </div>
     </div>
     <div class="services__slider swiper">
       <div class="services__slider-wrapper swiper-wrapper">
@@ -355,7 +361,9 @@
 
   <section class="features">
     <div class="features__container base-container" id="services">
-      <h2 class="features__title section-title base-title"><span class="color-elm">Виды услуг</span>, которые мы предоставляем </h2>
+      <div class="features__title section-title">
+        <h2><span class="color-elm">Виды услуг</span>, которые мы предоставляем</h2>
+      </div>
       <div class="features__wrapper">
         <div class="features__wrapper-item">
           <div class="features__item-info" data-aos="fade-right" data-aos-duration="1500">
@@ -468,7 +476,9 @@
 
   <section class="callback-block">
     <div class="callback-block__container base-container" id="contacts">
-      <h2 class="callback-block__title section-title base-title"><span class="color-elm">Свяжитесь с нами</span> и мы вам поможем</h2>
+      <div class="callback-block__title section-title">
+        <h2><span class="color-elm">Свяжитесь с нами</span> и мы вам поможем</h2>
+      </div>
       <div class="callback-block__wrapper">
         <div class="callback-block__column callback-block__column--left">
           <div class="callback-block__column-caption">
@@ -562,7 +572,7 @@
     </style>
 
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-    <script> ymaps.ready(function () { var myMap = new ymaps.Map('map', { center: [53.902284, 27.561831], zoom: 11 }, { searchControlProvider: 'yandex#search' }), MyIconContentLayout = ymaps.templateLayoutFactory.createClass('<div style="color: #FFFFFF; font-weight: medium;">$[properties.iconContent]</div>'), myPlacemarkWithContent = new ymaps.Placemark([53.902284, 27.561831], { hintContent: 'город Минск' }, { iconLayout: 'default#imageWithContent', iconImageHref: 'https://files.catbox.moe/sw6ezc.png', iconImageSize: [55, 55], iconImageOffset: [0, 0], iconContentOffset: [15, 15], iconContentLayout: MyIconContentLayout }); myMap.geoObjects.add(myPlacemarkWithContent); }); </script>
+    <script> ymaps.ready(function () { var myMap = new ymaps.Map('map', { center: [38.700945, -9.135357], zoom: 5 }, { searchControlProvider: 'yandex#search' }), MyIconContentLayout = ymaps.templateLayoutFactory.createClass('<div style="color: #FFFFFF; font-weight: medium;">$[properties.iconContent]</div>'), myPlacemarkWithContent = new ymaps.Placemark([38.700945, -9.135357], { hintContent: 'usc-master' }, { iconLayout: 'default#imageWithContent', iconImageHref: 'https://files.catbox.moe/sw6ezc.png', iconImageSize: [55, 55], iconImageOffset: [0, 0], iconContentOffset: [15, 15], iconContentLayout: MyIconContentLayout }); myMap.geoObjects.add(myPlacemarkWithContent); }); </script>
   </section>
 </main>
 
