--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
           </div>
           <div class="heading__slider-slide swiper-slide">
             <div class="heading__slide-column">
-              <h2 class="heading__slide-title section-title base-title">Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              <div class="heading__slide-title section-title">
+                <h2>Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              </div>
               <div class="heading__slide-text">
                 <p>
                   Компания USC Master предоставляет широкий
@@ -52,7 +54,9 @@
           </div>
           <div class="heading__slider-slide swiper-slide">
             <div class="heading__slide-column">
-              <h2 class="heading__slide-title section-title base-title">Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              <div class="heading__slide-title section-title">
+                <h2>Лучший сервис услуг в <span class="color-elm">Португалии!</span></h2>
+              </div>
               <div class="heading__slide-text">
                 <p>
                   Мы гарантируем
@@ -391,6 +395,10 @@
         background-color: var(--color-white);
 
         padding: 58px 0 0 0;
+      }
+
+      .ymaps-2-1-79-map {
+        height: 459px !important;
       }
 
       @media (min-width: 320px) and (max-width: 1279px) {
