--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,11 @@
 <main class="page-content">
   <section class="heading">
 
-    <div class="heading__graphic">
-      <div class="heading__graphic-wrapper"></div>
+    <div class="heading__graphic" id="tsparticles">
+      <div class="heading__graphic-wrapper">
+        <canvas class="heading__graphic-canvas" id="particles"></canvas>
+        <div class="heading__canvas-layout"></div>
+      </div>
     </div>
 
     <div class="heading__graphic heading__graphic--left"></div>
@@ -151,6 +154,10 @@
   </section>
 
   <section class="services">
+
+    <canvas class="services__graphic-canvas" id="particles2"></canvas>
+    <div class="services__canvas-layout"></div>
+
     <div class="services__container base-container" id="projects">
       <div class="services__title section-title">
         <h2>«USC Master» - компания с качественной продукцией на рынке</h2>
